@@ -27,8 +27,13 @@ Some changes are backward incompatible and may require code change in the projec
 . Security
 * to come
 
+. Server
+* Updated 3rd party jars (apache commons etc) to latest versions
+
 . Build / Dev / Docu
-* to come
+* In Eclipse, sub-projects Client, Server, Theme etc now have names BCD-UI--SubProjectName to keep them together in the navigation tree
+* Switched to gradle 4.2, added gradle wrapper
+* Updated bcduiApiStubs.js to fit Eclipse Oxygen+Tern and IDEA 2017.2
 
 .Major bug fixes:
 * to come
@@ -36,6 +41,7 @@ Some changes are backward incompatible and may require code change in the projec
 .Backward Incompatibilities:
 * cube/scorecard blindUpDowns, ranking require new i18n keys (bcd_Rank_, bcd_Sc_Blind_, bcd_Cb_Blind_)
 * Charts: Moved VML drawer to BCD-UI-DE
+* Updated 3rd party jars (apache commons etc) to latest versions
 
 ==== Release 5_2_0
 
